index + sign up

--- a/wattx_app/static/css/style.css
+++ b/wattx_app/static/css/style.css
@@ -120,7 +120,6 @@ a:focus {
 }
 
 
-
 /* section title */
 .section-title {
   padding-bottom: 70px;
@@ -189,36 +188,37 @@ a:focus {
       -ms-flex-align: center;
         align-items: center;
   text-align: center;
-  height: 100vh;
+  /*height: 50vh;*/
+  height: 350px;
   overflow: hidden;
   position: relative;
 }
 
 #home .gradient-overlay {
   background: #c21500; /* fallback for old browsers */  
-  background: -webkit-linear-gradient(to left, #c21500 , #ffc500); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #c21500 , #ffc500); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to left, #6e7d93 , #2a3e5b); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #6e7d93 , #2a3e5b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   opacity: 0.8;      
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100vh;
+  /*height: 100vh;*/
+  height: 500px;
 }
 
 #home .btn {
   background: transparent;
   border: 3px solid #ffffff;
-  color: #ffffff;
+  /*color: #ffffff;*/
   font-size: 12px;
   letter-spacing: 2px;
   padding: 13px 30px;
-  margin-top: 34px;
   text-transform: uppercase;
 }
-#home .btn:hover,
+/*#home .btn:hover,
 #home .btn:focus {
-  color: #c21500;
-}
+  color:  #2a3e5b;
+}*/
 
 
 /* Navigation section */
@@ -234,33 +234,38 @@ a:focus {
   font-size: 28px;
   font-weight: 600;
   letter-spacing: 2px;
-  line-height: 40px;
+  line-height: 50px;
   margin: 0;
+}
+
+.nav {
+  margin-left: 20px;
 }
 
 .navbar-default .navbar-nav li a {
     color: #757575;
-    font-size: 19px;
+    font-size: 22px;
     font-weight: 300;
     line-height: 50px;
+    margin: 0 28px !important;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
 
 .navbar-default .navbar-nav > li a:hover {
-    color: #c21500 !important;
+    color: #1a2a42 !important;
 }
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #606060;
+    color: #1a2a42;
     background-color: transparent;
 }
 
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: #c21500;
+    color: #1a2a42;
     background-color: transparent;
 }
 
@@ -278,6 +283,31 @@ a:focus {
   background-color: transparent;
 }
 
+
+.navbar-default .btn {
+  background: transparent;
+  border: 3px solid #6e7d93;
+  color: #6e7d93;
+  font-size: 12px;
+  letter-spacing: 2px;
+  padding: 13px 30px;
+  margin-top: 15px;
+  text-transform: uppercase;
+}
+
+.navbar-default .btn:hover,
+.navbar-default .btn:focus {
+  background: #6e7d93 !important;
+  color:  #ffffff;
+}
+/*
+.navbar-default > .active > .btn,
+.navbar-default > .active > .btn:hover,
+.navbar-default > .active > .btn:focus {
+    color: #1a2a42;
+    background-color: transparent;
+}
+*/
 
 
 /* Feature section */
@@ -343,7 +373,7 @@ a:focus {
 
 /* Video section  */
 #video {
-  background: url('../images/video-bg.jpg') 50% 0 repeat-y fixed;
+  background: url('../images/work.jpg') 50% 0 repeat-y fixed;
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center center;
@@ -532,7 +562,9 @@ a:focus {
 
 
 /* Login section */
-
+#login {
+  height: 300px;
+}
 
 
 /*filter css*/
