--- a/wattx_app/static/css/style.css
+++ b/wattx_app/static/css/style.css
@@ -398,11 +398,11 @@ a:focus {
   background-size: cover;
   background-position: center center;
   position: relative;
-  color: #999;
+  color: #ffffff;
 }
 
 #video .overlay {
-  background: rgba(03,03,03,0.6);
+  background: rgba(110, 125, 147,0.6);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -583,7 +583,7 @@ a:focus {
 
 /* Login section */
 #survey {
-  height: 300px;
+  min-height: 400px;
 }
 
 
